# Candor-lab

./: .gitignore  GOVERNANCE.md  LANG_PHYLOSOPHY.md  LICENSE-MIT  MEMORY.md  PHILOSOPHY_RETROSPECTIVE.md  README.md  ROADMAP.md  VERSIONING.md
baselines/rust/allocator/: Cargo.toml  README.md
compiler/: .gitignore  Cargo.toml
compiler/.config/: nextest.toml
compiler/benches/: p20.rs  p20_gen.rs
compiler/benches/p20-reference/: p20-manifest.json
compiler/src/: ast.rs  audit.rs  diag.rs  dispatch_trace.rs  foreign_io.rs  generics.rs  lib.rs  main.rs  manifest.rs  modules.rs  parser.rs  resolve_pkg.rs  types.rs
compiler/src/backend/: aot_runtime.c  freestanding_runtime.c  llvm.rs  lower.rs  mod.rs
compiler/src/check/: effects.rs  expr.rs  generics.rs  mod.rs  stmt.rs
compiler/src/interp/: eval.rs
compiler/src/mir/: build.rs  interp.rs  mod.rs  opt.rs  serial.rs
compiler/src/real/: emit.rs  fmt.rs  lexer.rs  mod.rs  parser.rs  token.rs
compiler/tests/: adapters.rs  aot.rs  bitcast.rs  check.rs  check_fixtures.rs  cli_io.rs  collection_drop.rs  concurrency.rs  concurrency_native.rs  corelib.rs  count.rs  dispatch_gate.rs  editions.rs  floats.rs  floats_f32.rs  fmt.rs  foreign.rs  freelist.rs  freestanding.rs  generics.rs  golden.rs  http_server.rs  iteration.rs  lines.rs  llvm.rs  loans.rs  manifest.rs  map.rs  map_native.rs  match_guard.rs  match_int.rs  match_range.rs  migrate.rs  mir_serial.rs  modules.rs  multi_iface_dispatch.rs  ord.rs  packages.rs  print.rs  real_syntax.rs  (+28 more)
compiler/tests/fixtures/: 11_2_scheduler.cn  corelib_combinators.cnr  corelib_flat.cnr  ffi_audit.golden.json  std_fmt.cnr
compiler/tests/selfhost_modtree/: mod.rs
prototype/: Cargo.toml  MEMORY.md
prototype/benches/: p20.rs
prototype/selfhost/analyses/: analyses.cnr
prototype/selfhost/checker/: checker.cnr
prototype/selfhost/codegen/: codegen.cnr
prototype/selfhost/interp/: interp.cnr
prototype/selfhost/lexer/: lexer.cnr
prototype/selfhost/lower/: lower.cnr
prototype/selfhost/mono/: mono.cnr
prototype/selfhost/parser/: parser.cnr
prototype/src/: ast.rs  audit.rs  count.rs  foreign.rs  foreign_io.rs  generics.rs  lexer.rs  lib.rs  main.rs  manifest.rs  modules.rs  parser.rs  pkg_fetch.rs  resolve.rs  resolve_pkg.rs  span.rs  token.rs  types.rs
prototype/src/backend/: aot_runtime.c  freestanding_runtime.c  llvm.rs  lower.rs  mod.rs  object.rs  runtime.rs
prototype/src/check/: concurrency.rs  dataflow.rs  expr.rs  foreign.rs  generics.rs  init.rs  loans.rs  mod.rs  patterns.rs  stmt.rs
prototype/src/interp/: eval.rs  layout.rs  mem.rs  mod.rs
prototype/src/mir/: build.rs  interp.rs  mod.rs  opt.rs  serial.rs
prototype/src/real/: emit.rs  fmt.rs  lexer.rs  mod.rs  parser.rs  token.rs
prototype/tests/: adapters.rs  aot.rs  bitcast.rs  check.rs  check_fixtures.rs  collection_drop.rs  concurrency.rs  concurrency_native.rs  corelib.rs  count.rs  fmt.rs  foreign.rs  freelist.rs  freestanding.rs  generics.rs  golden.rs  iteration.rs  lines.rs  llvm.rs  loans.rs  match_guard.rs  match_int.rs  match_range.rs  migrate.rs  mir_serial.rs  modules.rs  packages.rs  print.rs  real_syntax.rs  refindexed.rs  run.rs  run_golden.rs  selfhost_analyses.rs  selfhost_checker.rs  selfhost_codegen.rs  selfhost_effects.rs  selfhost_interp.rs  selfhost_lexer.rs  selfhost_loans.rs  selfhost_lower.rs  (+13 more)
prototype/tests/fixtures/: 11_1_allocator.cn  11_3_mmio.cn  11_4_parser.cn  11_5_arena.cn  corelib_flat.cnr  ffi_audit.golden.json  std_fmt.cnr  std_print.cnr  std_print_show.cnr
prototype/tests/selfhost_modtree/: mod.rs
tools/candor-lsp/: Cargo.toml  README.md
tools/candor-lsp/src/: main.rs
tools/corpus-gen/: Cargo.toml  README.md
tools/corpus-gen/corpus-seed/: manifest.json
tools/corpus-gen/src/: lib.rs  main.rs  manifest.rs  oracle.rs  rng.rs  shapes.rs
tools/corpus-gen/tests/: determinism.rs  filter.rs  manifest.rs
tools/eval-harness/: Cargo.toml  README.md
tools/eval-harness/anchors/: gen_align_up.battery.cnr  gen_arena_push_get.battery.cnr  gen_from_widen_question.battery.cnr  gen_min_i64.battery.cnr  gen_opt_checked_sub.battery.cnr  gen_opt_unwrap_or.battery.cnr  gen_res_divide.battery.cnr  gen_saturating_add.battery.cnr  grad_bump_box_compute.battery.cnr  (+14 more)
tools/rust-count/: Cargo.toml
(+1152 files in other folders)
