[package]
name = "candor"
version = "0.1.0"
edition = "2021"
description = "Candor Bet 5 validation prototype: lexer, AST and parser (Stage 1)"

[lib]
name = "candor"
path = "src/lib.rs"

[[bin]]
name = "candor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cranelift-codegen = "=0.132.3"
cranelift-frontend = "=0.132.3"
cranelift-module = "=0.132.3"
cranelift-jit = "=0.132.3"
libc = "0.2"
cranelift-object = "=0.132.3"
cranelift-native = "=0.132.3"
toml = "1"

[[bench]]
name = "p20"
harness = false

[dev-dependencies]
wasmi = "1.1.0"
