[package]
name = "candor-lsp"
version = "0.1.0"
edition = "2021"
description = "Minimal diagnostics-only LSP server for the Candor language (layer 2). Runs the candor check pipeline in-process and publishes diagnostics. No hover/completion/go-to-def (deferred to the real toolchain per P16)."

[[bin]]
name = "candor-lsp"
path = "src/main.rs"

[dependencies]
serde_json = "1"
# In-process consumption of the prototype front end (lib crate). We depend on the
# library only; we never shell out and never modify compiler/src.
candor = { path = "../../compiler" }
