[package]
name = "allocator"
version = "0.1.0"
edition = "2021"
description = "Idiomatic-Rust baseline general-purpose allocator for the Candor Bet 5 basket (spec-allocator.md)."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
linked_list_allocator = { version = "=0.10.6", default-features = false }

[profile.test]
opt-level = 2
